# pub-qmr-compiler-generator

./: .gitignore  README.md
builtin/: Cargo.toml
builtin/src/: lib.rs  scir.rs
generator/: debug
research/distributed/examples/: arch_2qpu.json  simple_2qpu.qmrl
research/problem/examples/: arch_2qpu_budget.json  dist_2qpu_budget.qmrl
scir/: README.md  examples.py  parse_schedule.py  requirements.txt  structures.py  validate_schedule.py
scir/pipe_diagrams/: cnot.gltf  cx1.gltf  cx_small.gltf  expensive_h.gltf  h.gltf  move_s.gltf  s_from_y.gltf  ss.gltf  t.gltf  xxx.gltf  zz.gltf
solver/: Cargo.toml
solver/src/: backend.rs  config.rs  structures.rs  utils.rs
