[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
once_cell = "1.21.3"
petgraph = "0.7.1"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
rustworkx-core = "0.16.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
signal-hook = "0.3.18"
vf2 = { git = 'https://github.com/amandashoe/vf2.git' }
